--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "directories": {
     "lib": "lib"
   },
-  "dependencies": {},
   "devDependencies": {
-    "chalk": "^2.4.2",
-    "mongoose": "^5.6.11"
+    "chalk": "^2.4.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,5 +16,8 @@
     "blockchain"
   ],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "mongoose": "^5.12.14"
+  }
 }
